themes/noelle-portfolio-theme/docroot/_diffs/css/custom.css
@import "mixins";
@import "compass/css3";
@import "compass/css3/transform";

/* ---------- Variables ---------- */

$bannerHeight: 771px;
$bannerHeightSmall: 350px;
$dockbarWidth: 67px;

/* ---------- Base styles ---------- */

.aui {
	#wrapper {
		margin: 0 auto;
		padding: 0;

		@include respond-to(phone, tablet) {
			& {
				padding-left: 0;
				padding-right: 0;
			}
		}

		@media (min-width: 980px) {
			& {
				padding-top: 0;
			}
		}
	}

	.tooltip {
		display: none;
	}

	a {
		color: #428BCA;

		&:focus, &:hover {
			color: #2A6496;
		}
	}

	body {
		background-color: #FFF;
		color: #282828;
		font-family: "Open Sans", Arial, Helvetica, sans-serif;
		font-size: 16px;
		line-height: 1.6;
	}

	blockquote {
		border-left: 5px solid #ccc;
		margin: 0 0 20px;
		padding: 10px 20px;

		p {
			font-size: 17.5px;
			font-weight: 300;
			line-height: 1.25;
		}
	}

	dd {
		line-height: 1.4;
		margin: 4px 0 0;
		padding: 0 0 0.5em 0;
	}

	h1, h2, h3, h4, h5, h6 {
		font-family: Raleway, Arial, Helvetica, sans-serif;
		font-weight: normal;
		line-height: 1.1;
	}

	h1, h2, h3 {
		margin: 20px 0 10px;
	}

	h4, h5, h6 {
		margin: 10px 0;
	}

	label {
		display: inline-block;
		font-size: 16px;
		font-weight: bold;
		line-height: 1.6;
	}

	table {
		width: 100%;
		word-wrap: break-word;
	}

	th, td {
		border: 1px solid #DDD;
		padding: 8px;
		text-align: left;
	}

	th {
		background: #EEE;
	}

	/* ---------- Banner ---------- */

	#heading {
		padding-top: 65px;
	}

	.banner-large, .banner-small {
		background-image: url(../images/custom/banner.jpg);
		background-position: center center;
		background-repeat: no-repeat;
		background-size: cover;
	}

	.banner-large {
		height: $bannerHeight;

		.page-title {
			color: #FFF;
			font-size: 100px;
		}
	}

	.banner-small {
		height: $bannerHeightSmall;
	}

	.link-to-content {
		font-family: "Open Sans", Arial, Helvetica, sans-serif;
		font-size: 18px;
		margin: 20px auto;
		text-align: center;

		> a {
			border: 1px solid #FFF;
			border-radius: 5px;
			color: #FFF;
			padding: 10px 25px;

			&:hover {
				background: rgba(0, 0, 0, 0.1);
				text-decoration: none;
			}
		}
	}

	.logo {
		margin: 0 5px 0 0;
	}

	.page-title {
		color: #FFF;
		font-family: Megrim, Arial, Helvetica, sans-serif;
		margin-bottom: 90px;
		margin-top: 0;
		padding-top: 20px;
		text-align: center;
	}

	.site-title {
		color: #FFF;
		display: inline-block;
		margin: 0 0 0 $dockbarWidth;
		padding: 5px 10px;
	}

	/* ---------- Dockbar ---------- */

	.dockbar > .navbar-inner {
		min-height: 49px;
	}

	.dockbar .navbar-inner .site-administration-menu {
		li a {
			color: #999;
		}

		li a:hover {
			background: transparent;
			color: #FFF;
		}
	}

	.portlet-dockbar .navbar-inner .container {
		margin-left: auto;
		margin-right: auto;
	}

	.dropdown-menu {
		> .active > a, > .active > a:focus, > .active > a:hover, > li > a:hover {
			background: #FFF;
			color: #000;
		}
	}

	.dockbar .nav > .active > a, .dockbar .nav > .active > a:focus, .dockbar .nav > .active > a:hover, .dockbar .nav > li > a:focus, .dockbar .nav > li > a:hover, .dockbar .nav li.dropdown.active > .dropdown-toggle, .dockbar .nav li.dropdown.open > .dropdown-toggle, .dockbar .nav li.dropdown.open.active > .dropdown-toggle {
		background: transparent;
		color: #FFF;
	}

	.dockbar.navbar-static-top {
		margin-top: 0;
		position: fixed;
		z-index: 301;
	}

	/* ---------- Navigation ---------- */

	.site-navigation.navbar {
		margin-top: 0;
	}

	.modify-pages .delete-tab {
		color: #FFF;
		text-shadow: none;

		&:hover {
			color: #F00;
		}
	}

	/* ---------- Content ---------- */

	#content {
		background: #FFF;
		padding: 50px 20px 10px;

		ol, ul {
			margin-left: 0;
			padding-left: 40px;
		}

		li {
			line-height: 1.6;
		}
	}

	.btn {
		background: #999;

		&:hover {
			background: #AAA;
		}
	}

	.navbar {
		margin-top: 5px;
	}

	select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
		border-radius: 5px;
	}

	/* ---------- Footer ---------- */

	footer {
		background: #222;
		color: #7B7B7B;
		font-family: "Open Sans", Arial, Helvetica, sans-serif;
		left: 0;
		padding: 10px 20px;
		position: absolute;
		right: 0;

		a {
			color: #AAA;
		}

		h3 {
			color: #FFF;
			margin: 5px 0;
		}
	}

	.affix-footer {
		bottom: 0;
	}

	.footer-left {
		float: left;
		width: 60%;
	}

	.footer-right {
		float: right;
		padding-left: 5%;
		width: 30%;

		ul {
			list-style: none;
		}

		a:hover {
			color: #FFF;
			text-decoration: none;
		}
	}

	.powered-by {
		clear: both;
		text-align: right;

		a:hover {
			color: #FFF;
			text-decoration: none;
		}
	}

	/* ---------- Portlet Styling ---------- */

	.portlet-title {
		font-size: 32px;
		margin: 0;
	}

	.portlet-title img {
		display: none;
	}

	.portlet-content {
		border-bottom: 5px solid #EEE;
		margin-bottom: 40px;
		padding-bottom: 30px;
		padding-top: 0;
	}

	.jumbotron {
		padding: 20px 60px 40px;
		text-align: center;

		.portlet-title-text {
			font-size: 40px;
		}

		.portlet-body > div:first-child {
			font-size: 21px;
			line-height: 33.5px;
		}

		.portlet-content {
			border: 0;
			margin: 0;
			padding-bottom: 12px;
		}

		&:after {
			border: 0;
			border-bottom: 3px solid #EEE;
			content: "";
			display: block;
			height: 30px;
			margin-left: 30%;
			width: 40%;
		}

		&:before {
			border-top: 5px solid #EEE;
			content: "";
			display: block;
			height: 20px;
			margin-left: 25%;
			width: 50%;
		}
	}

	#portlet_58 {
		text-align: center;

		input {
			display: block;
			margin-left: auto;
			margin-right: auto;
		}
	}

	.carousel {
		margin-left: auto;
		margin-right: auto;
	}
}
/* ... */

